--- a/examples/vanilla-js/notificacao-transito-app-js/index.html
+++ b/examples/vanilla-js/notificacao-transito-app-js/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Desenvolvido para fins acadêmicos com softwares de IA - Lavable e Github Copilot -->
+<!-- Desenvolvido para fins acadêmicos com auxílio de softwares de IA - Lavable e Github Copilot -->
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
